[gd_scene load_steps=8 format=3 uid="uid://dc4yngl0r5lu3"]

[ext_resource type="Script" path="res://Scripts/Shop/upgrade_panel.gd" id="1_lfcyn"]
[ext_resource type="Texture2D" uid="uid://cqlg6f8yonu0f" path="res://Assets/Textures/UI/add_normal.png" id="1_wm3d0"]
[ext_resource type="Texture2D" uid="uid://co7pj57t4d011" path="res://Assets/Textures/UI/add_pressed.png" id="2_6odp0"]
[ext_resource type="Texture2D" uid="uid://chb5tu5ndjge3" path="res://Assets/Textures/UI/cell.png" id="2_bl7tu"]
[ext_resource type="Texture2D" uid="uid://cujrsge01bxo4" path="res://Assets/Textures/UI/add_hover.png" id="3_0pc57"]
[ext_resource type="Texture2D" uid="uid://dh5hj1osywe41" path="res://Assets/Textures/UI/cell_full.png" id="3_regfc"]
[ext_resource type="Texture2D" uid="uid://c0oil4ftcdtvc" path="res://Assets/Textures/UI/add_disabled.png" id="4_4oq4m"]

[node name="UpgradePanel" type="PanelContainer"]
offset_right = 172.0
offset_bottom = 72.0
script = ExtResource("1_lfcyn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="UpgradeName" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Upgrade!"

[node name="BarContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/BarContainer"]
layout_mode = 2
texture = ExtResource("2_bl7tu")
stretch_mode = 1

[node name="FullBarContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/BarContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer/BarContainer/FullBarContainer"]
layout_mode = 2
texture = ExtResource("3_regfc")
expand_mode = 1
stretch_mode = 1

[node name="AddButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("1_wm3d0")
texture_pressed = ExtResource("2_6odp0")
texture_hover = ExtResource("3_0pc57")
texture_disabled = ExtResource("4_4oq4m")

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 16

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 2
text = "TEST TEST TEST"
